WIP: declarative notifications

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,15 +29,10 @@ packages =
 [entry_points]
 ceilometer.notification =
     magnetodb_table = ceilometer.key_value_storage.notifications:Table
-    magnetodb_index_count = ceilometer.key_value_storage.notifications:Index
     instance = ceilometer.compute.notifications.instance:Instance
     instance_flavor = ceilometer.compute.notifications.instance:InstanceFlavor
     instance_delete = ceilometer.compute.notifications.instance:InstanceDelete
     instance_scheduled = ceilometer.compute.notifications.instance:InstanceScheduled
-    memory = ceilometer.compute.notifications.instance:Memory
-    vcpus = ceilometer.compute.notifications.instance:VCpus
-    disk_root_size = ceilometer.compute.notifications.instance:RootDiskSize
-    disk_ephemeral_size = ceilometer.compute.notifications.instance:EphemeralDiskSize
     cpu_frequency = ceilometer.compute.notifications.cpu:CpuFrequency
     cpu_user_time = ceilometer.compute.notifications.cpu:CpuUserTime
     cpu_kernel_time = ceilometer.compute.notifications.cpu:CpuKernelTime
@@ -63,15 +58,11 @@ ceilometer.notification =
     role_assignment = ceilometer.identity.notifications:RoleAssignment
     image_crud = ceilometer.image.notifications:ImageCRUD
     image = ceilometer.image.notifications:Image
-    image_size = ceilometer.image.notifications:ImageSize
-    image_download = ceilometer.image.notifications:ImageDownload
-    image_serve = ceilometer.image.notifications:ImageServe
     network = ceilometer.network.notifications:Network
     subnet = ceilometer.network.notifications:Subnet
     port = ceilometer.network.notifications:Port
     router = ceilometer.network.notifications:Router
     floatingip = ceilometer.network.notifications:FloatingIP
-    bandwidth = ceilometer.network.notifications:Bandwidth
     http.request = ceilometer.middleware:HTTPRequest
     http.response = ceilometer.middleware:HTTPResponse
     stack_crud = ceilometer.orchestration.notifications:StackCRUD
@@ -95,6 +86,7 @@ ceilometer.notification =
     objectstore.request = ceilometer.objectstore.notifications:SwiftWsgiMiddleware
     objectstore.request.meters = ceilometer.objectstore.notifications:SwiftWsgiMiddlewareMeters
     _sample = ceilometer.telemetry.notifications:TelemetryApiPost
+    all = ceilometer.meter.notifications:ProcessMeterNotifications
 
 ceilometer.discover =
     local_instances = ceilometer.compute.discovery:InstanceDiscovery
